# evergreen

./: .dockerignore  .env.example  Dockerfile  Procfile  README.md  alembic.ini  docker-compose.yml  enterprise-knowledge-retrieval-research-dec-2025.md  entity-extraction-knowledge-graph-dec-2025.md  graph-database-comparison-dec-2025.md  llm-orchestration-rag-frameworks-dec-2025.md  microsoft-google-workspace-apis-dec-2025.md  pyproject.toml  railway.toml  requirements-api.txt
alembic/: env.py
alembic/versions/: 001_initial_schema.py
docs/memory-bank/: ARCHITECTURE.md  M365_INTEGRATION.md  PRODUCTION_ROADMAP.md  PROGRESS.md  PROJECT_BRIEF.md  TECH_STACK.md
src/evergreen/: __init__.py  config.py  models.py
src/evergreen/api/: __init__.py  main.py
src/evergreen/api/routes/: __init__.py  auth.py  tenants.py
src/evergreen/auth/: __init__.py  dependencies.py  jwt.py  password.py  schemas.py
src/evergreen/connectors/: __init__.py  base.py  m365.py
src/evergreen/db/: __init__.py  models.py
src/evergreen/extraction/: __init__.py  extractor.py
src/evergreen/ingestion/: __init__.py  chunker.py  orchestrator.py  parser.py
src/evergreen/retrieval/: __init__.py  engine.py
src/evergreen/services/: __init__.py  auth.py  tenant.py  user.py
src/evergreen/storage/: __init__.py  embeddings.py  graph.py  vector.py
tests/: __init__.py  test_auth.py  test_ingestion.py
